--- a/spaceship-titanic.ipynb
+++ b/spaceship-titanic.ipynb
@@ -1,9 +1,202 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2387b38f-f38b-4683-b74c-c659afff7572",
+   "metadata": {},
+   "source": [
+    "### spaceship titanic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa01c53c-9be3-4b75-8d6b-478bc1db76aa",
+   "metadata": {},
+   "source": [
+    "###\n",
+    "1- Goal: classification\n",
+    "\n",
+    "2-Read datasets\n",
+    "\n",
+    "3- data preprocessing\n",
+    "\n",
+    "    handle missing values\n",
+    "    encode categorical variables\n",
+    "    bin continuous variables\n",
+    "\n",
+    "4-patterns and visualization\n",
+    "###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2c09a7e5-aac9-47a7-8c16-02117a94c0fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  PassengerId HomePlanet CryoSleep  Cabin  Destination   Age    VIP  \\\n",
+      "0     0001_01     Europa     False  B/0/P  TRAPPIST-1e  39.0  False   \n",
+      "1     0002_01      Earth     False  F/0/S  TRAPPIST-1e  24.0  False   \n",
+      "2     0003_01     Europa     False  A/0/S  TRAPPIST-1e  58.0   True   \n",
+      "3     0003_02     Europa     False  A/0/S  TRAPPIST-1e  33.0  False   \n",
+      "4     0004_01      Earth     False  F/1/S  TRAPPIST-1e  16.0  False   \n",
+      "\n",
+      "   RoomService  FoodCourt  ShoppingMall     Spa  VRDeck               Name  \\\n",
+      "0          0.0        0.0           0.0     0.0     0.0    Maham Ofracculy   \n",
+      "1        109.0        9.0          25.0   549.0    44.0       Juanna Vines   \n",
+      "2         43.0     3576.0           0.0  6715.0    49.0      Altark Susent   \n",
+      "3          0.0     1283.0         371.0  3329.0   193.0       Solam Susent   \n",
+      "4        303.0       70.0         151.0   565.0     2.0  Willy Santantines   \n",
+      "\n",
+      "   Transported  \n",
+      "0        False  \n",
+      "1         True  \n",
+      "2        False  \n",
+      "3        False  \n",
+      "4         True  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8693 entries, 0 to 8692\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   PassengerId   8693 non-null   object \n",
+      " 1   HomePlanet    8492 non-null   object \n",
+      " 2   CryoSleep     8476 non-null   object \n",
+      " 3   Cabin         8494 non-null   object \n",
+      " 4   Destination   8511 non-null   object \n",
+      " 5   Age           8514 non-null   float64\n",
+      " 6   VIP           8490 non-null   object \n",
+      " 7   RoomService   8512 non-null   float64\n",
+      " 8   FoodCourt     8510 non-null   float64\n",
+      " 9   ShoppingMall  8485 non-null   float64\n",
+      " 10  Spa           8510 non-null   float64\n",
+      " 11  VRDeck        8505 non-null   float64\n",
+      " 12  Name          8493 non-null   object \n",
+      " 13  Transported   8693 non-null   bool   \n",
+      "dtypes: bool(1), float64(6), object(7)\n",
+      "memory usage: 891.5+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read both train and test datasets\n",
+    "\n",
+    "import pandas as pd\n",
+    "try:\n",
+    "    train_df=pd.read_csv('train.csv')\n",
+    "    test_df=pd.read_csv('test.csv')\n",
+    "except FileNotFoundError:\n",
+    "    print('error')\n",
+    "print(train_df.head())\n",
+    "print(train_df.info())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72716b9b-6425-4419-8496-9a3b3518d639",
+   "id": "80dc9ffd-625d-49f7-a7bc-95b2c757b316",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a0a811ac-f3ec-4fc8-bed1-46a9791b6e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PassengerId       0\n",
+      "HomePlanet      201\n",
+      "CryoSleep       217\n",
+      "Cabin           199\n",
+      "Destination     182\n",
+      "Age             179\n",
+      "VIP             203\n",
+      "RoomService     181\n",
+      "FoodCourt       183\n",
+      "ShoppingMall    208\n",
+      "Spa             183\n",
+      "VRDeck          188\n",
+      "Name            200\n",
+      "Transported       0\n",
+      "dtype: int64\n",
+      "PassengerId       0\n",
+      "HomePlanet       87\n",
+      "CryoSleep        93\n",
+      "Cabin           100\n",
+      "Destination      92\n",
+      "Age              91\n",
+      "VIP              93\n",
+      "RoomService      82\n",
+      "FoodCourt       106\n",
+      "ShoppingMall     98\n",
+      "Spa             101\n",
+      "VRDeck           80\n",
+      "Name             94\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(train_df.isnull().sum())\n",
+    "print(test_df.isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43bf9817-e431-4c8d-80f8-d67e62ea843e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2332fe5a-f858-4456-9624-32db01a9461a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8adbe2fd-4214-4346-9f90-0bdc46b8c570",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "734bba81-9a50-4588-bb8f-73c59f393395",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a53d92b-01ff-4e2e-ab2a-2b8df420d0ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "553e1964-6c07-49e9-83a4-623ab41dcc9a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,11 +204,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
