final commit probably

--- a/spaceship-titanic.ipynb
+++ b/spaceship-titanic.ipynb
@@ -24,13 +24,13 @@
     "    encode categorical variables\n",
     "    bin continuous variables\n",
     "\n",
-    "4-patterns and visualization\n",
+    "4-Model selection and hyperparameter tuning\n",
     "###"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "2c09a7e5-aac9-47a7-8c16-02117a94c0fa",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "a0a811ac-f3ec-4fc8-bed1-46a9791b6e71",
    "metadata": {},
    "outputs": [
@@ -142,13 +142,122 @@
       "Spa             101\n",
       "VRDeck           80\n",
       "Name             94\n",
+      "dtype: int64\n",
+      "  PassengerId  CryoSleep  Destination   Age    VIP  RoomService  FoodCourt  \\\n",
+      "0     0001_01      False  TRAPPIST-1e  39.0  False          0.0        0.0   \n",
+      "1     0002_01      False  TRAPPIST-1e  24.0  False        109.0        9.0   \n",
+      "2     0003_01      False  TRAPPIST-1e  58.0   True         43.0     3576.0   \n",
+      "3     0003_02      False  TRAPPIST-1e  33.0  False          0.0     1283.0   \n",
+      "4     0004_01      False  TRAPPIST-1e  16.0  False        303.0       70.0   \n",
+      "\n",
+      "   ShoppingMall     Spa  VRDeck  Transported  HomePlanet_Europa  \\\n",
+      "0           0.0     0.0     0.0        False                  1   \n",
+      "1          25.0   549.0    44.0         True                  0   \n",
+      "2           0.0  6715.0    49.0        False                  1   \n",
+      "3         371.0  3329.0   193.0        False                  1   \n",
+      "4         151.0   565.0     2.0         True                  0   \n",
+      "\n",
+      "   HomePlanet_Mars  \n",
+      "0                0  \n",
+      "1                0  \n",
+      "2                0  \n",
+      "3                0  \n",
+      "4                0  \n",
+      "----------------------------------\n",
+      "PassengerId     0\n",
+      "Age             0\n",
+      "RoomService     0\n",
+      "FoodCourt       0\n",
+      "ShoppingMall    0\n",
+      "Spa             0\n",
+      "VRDeck          0\n",
+      "Transported     0\n",
+      "dtype: int64\n",
+      "PassengerId     0\n",
+      "HomePlanet      0\n",
+      "CryoSleep       0\n",
+      "Destination     0\n",
+      "Age             0\n",
+      "VIP             0\n",
+      "RoomService     0\n",
+      "FoodCourt       0\n",
+      "ShoppingMall    0\n",
+      "Spa             0\n",
+      "VRDeck          0\n",
       "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\persian dell\\AppData\\Local\\Temp\\ipykernel_6980\\1655680601.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  train_df[col].fillna(median_col,inplace=True)\n",
+      "C:\\Users\\persian dell\\AppData\\Local\\Temp\\ipykernel_6980\\1655680601.py:14: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  train_df[col].fillna(mode_col,inplace=True)\n",
+      "C:\\Users\\persian dell\\AppData\\Local\\Temp\\ipykernel_6980\\1655680601.py:14: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  train_df[col].fillna(mode_col,inplace=True)\n",
+      "C:\\Users\\persian dell\\AppData\\Local\\Temp\\ipykernel_6980\\1655680601.py:19: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  test_df[col].fillna(median_col,inplace=True)\n",
+      "C:\\Users\\persian dell\\AppData\\Local\\Temp\\ipykernel_6980\\1655680601.py:24: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  test_df[col].fillna(mode_col,inplace=True)\n",
+      "C:\\Users\\persian dell\\AppData\\Local\\Temp\\ipykernel_6980\\1655680601.py:24: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  test_df[col].fillna(mode_col,inplace=True)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
+    "print(train_df.isnull().sum())\n",
+    "print(test_df.isnull().sum())\n",
+    "\n",
+    "numeric_col=['Age','RoomService','FoodCourt','ShoppingMall','Spa','VRDeck']\n",
+    "for col in numeric_col:\n",
+    "    median_col =train_df[col].median()\n",
+    "    train_df[col].fillna(median_col,inplace=True)\n",
+    "\n",
+    "categorical_col=['HomePlanet','CryoSleep','Destination','VIP']\n",
+    "for col in categorical_col:\n",
+    "    mode_col=train_df[col].mode()[0]\n",
+    "    train_df[col].fillna(mode_col,inplace=True)\n",
+    "\n",
+    "numeric_col=['Age','RoomService','FoodCourt','ShoppingMall','Spa','VRDeck']\n",
+    "for col in numeric_col:\n",
+    "    median_col =test_df[col].median()\n",
+    "    test_df[col].fillna(median_col,inplace=True)\n",
+    "\n",
+    "categorical_col=['HomePlanet','CryoSleep','Destination','VIP',]\n",
+    "for col in categorical_col:\n",
+    "    mode_col=test_df[col].mode()[0]\n",
+    "    test_df[col].fillna(mode_col,inplace=True)\n",
+    "train_df.drop(columns=['Cabin','Name'],inplace=True,errors='ignore')\n",
+    "test_df.drop(columns=['Cabin','Name'],inplace=True,errors='ignore')\n",
+    "\n",
+    "#encoded_df=pd.get_dummies(train_df,columns=['HomePlanet'],drop_first=True,dtype=int)\n",
+    "train_df.drop(columns=['HomePlanet','HomePlanet','CryoSleep','Destination','VIP'],inplace=True,errors='ignore')\n",
+    "print(encoded_df.head())\n",
+    "print('----------------------------------')\n",
     "print(train_df.isnull().sum())\n",
     "print(test_df.isnull().sum())\n"
    ]
@@ -163,11 +272,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "2332fe5a-f858-4456-9624-32db01a9461a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -179,11 +294,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "734bba81-9a50-4588-bb8f-73c59f393395",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- ابعاد داده‌های آموزش مدل:\n",
+      "X_train shape: (6954, 6)\n",
+      "y_train shape: (6954,)\n",
+      "X_val shape: (1739, 6)\n",
+      "y_val shape: (1739,)\n",
+      "\n",
+      "دقت مدل Logistic Regression روی داده‌های اعتبارسنجی: 0.7700\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# فرض می‌کنیم train_df و test_df از مراحل قبلی موجود هستند.\n",
+    "# و test_passenger_ids رو هم ذخیره کردیم.\n",
+    "\n",
+    "# PassengerId رو از ویژگی‌ها حذف می‌کنیم چون برای آموزش مدل لازم نیست.\n",
+    "# Transported هم که هدف ماست.\n",
+    "features = train_df.drop(['PassengerId', 'Transported'], axis=1).columns\n",
+    "\n",
+    "X = train_df[features]\n",
+    "y = train_df['Transported']\n",
+    "\n",
+    "# تقسیم داده‌ها به مجموعه آموزش و اعتبارسنجی\n",
+    "# test_size=0.20 یعنی 20 درصد داده‌ها برای اعتبارسنجی استفاده میشن\n",
+    "# random_state برای تکرارپذیری نتیجه هست\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.20, random_state=42)\n",
+    "\n",
+    "print(\"\\n--- ابعاد داده‌های آموزش مدل:\")\n",
+    "print(f\"X_train shape: {X_train.shape}\")\n",
+    "print(f\"y_train shape: {y_train.shape}\")\n",
+    "print(f\"X_val shape: {X_val.shape}\")\n",
+    "print(f\"y_val shape: {y_val.shape}\")\n",
+    "\n",
+    "# ایجاد و آموزش مدل Logistic Regression\n",
+    "model = LogisticRegression(random_state=42, solver='liblinear', max_iter=1000) # solver و max_iter برای جلوگیری از اخطار همراه‌اند.\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# پیش‌بینی روی داده‌های اعتبارسنجی\n",
+    "y_pred_val = model.predict(X_val)\n",
+    "\n",
+    "# محاسبه دقت مدل\n",
+    "accuracy = accuracy_score(y_val, y_pred_val)\n",
+    "print(f\"\\nدقت مدل Logistic Regression روی داده‌های اعتبارسنجی: {accuracy:.4f}\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -197,6 +363,118 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "553e1964-6c07-49e9-83a4-623ab41dcc9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "150d6091-e663-4ffe-b5b5-910550c14151",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0455366-6124-4235-8eac-0b3e1cdc5734",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "070ee8b4-101c-48a6-9caa-fc7e1771357a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bffa9536-644a-4711-a03f-045bca8bbbca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6db1d9d-4856-4889-8598-3b493d7f6494",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2ba92c9-221b-44a8-87b1-8c839a6915d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df7456d-fdb5-4029-b733-5bf7c0888d1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "068f75d2-06aa-4809-9b2f-7b4d11b2a42b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69722d16-c003-4c1d-bef5-5ac7042ca5f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0867bb95-9a07-455c-939b-0cc76209f415",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5c6429f-b70b-41ea-93d8-65216664c57a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fee85d1e-0c7f-4099-8032-7f8602d5ce1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#goal: classification\n",
+    "#Read data\n",
+    "# 1-data preprocessing\n",
+    "    #handle missing value --> mode/median // pandas,numpy,sklearn // read_csv(),head(),tail(),info(),isnull(),fillna(),dropna(),drop(),get_dummies()\n",
+    "    #encode categorical variables\n",
+    "    #bin numeric variables\n",
+    "#Tip: all of the instruction need to be applied on both train and test datasets with a same pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef66a823-9b2c-40ed-a24c-397dcc67fc5c",
    "metadata": {},
    "outputs": [],
    "source": []
