--- a/spaceship-titanic.ipynb
+++ b/spaceship-titanic.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "734bba81-9a50-4588-bb8f-73c59f393395",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,8 @@
     "\n",
     "# محاسبه دقت مدل\n",
     "accuracy = accuracy_score(y_val, y_pred_val)\n",
-    "print(f\"\\nدقت مدل Logistic Regression روی داده‌های اعتبارسنجی: {accuracy:.4f}\")\n"
+    "print(f\"\\nدقت مدل Logistic Regression روی داده‌های اعتبارسنجی: {accuracy:.4f}\")\n",
+    "#."
    ]
   },
   {
